<resources>
    <string name="app_name">Floria</string>
    <string name="logo">logo</string>
    <string name="logo2">logo</string>
    <string name="onboard1image">onboard1Image</string>
    <string name="explore_flowers_that_match_every_nmood_and_moment">explore flowers that match every\nmood and moment.</string>
    <string name="blooms_that_speak">Blooms That Speak</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="choose_dreamy_wraps_and_accents_nto_give_your_bouquet_its_own_personality">Choose dreamy wraps, and accents\nto give your bouquet its own personality.</string>
    <string name="wrapping_papers_and_ribbons">Wrapping papers and ribbons</string>
    <string name="wrap_it_with_love">Wrap It With Love</string>
    <string name="your_story_in_a_bouquet">Your Story in a Bouquet</string>
    <string name="blend_petals_stems_and_wraps_into_a_masterpiece_and_send_love_in_bloom">Blend petals, stems, and wraps into a masterpiece—and send love in bloom</string>
<string name="settings">settings</string>
    <string name="notifications" >notifications</string>
    <string name="favorites" >favorites</string>
    <string name="search_anything" >search Anything</string>
    <string name="flower_bouquet_collections" >Flower bouquet collections</string>
    <string name="casual_bouquet" >casual_bouquet</string>
    <string name="casual" >Casual</string>
    <string name="anniversary_bouquet" >anniversary_bouquet</string>
    <string name="anniversary" >Anniversary</string>
    <string name="birthday_bouquet" >birthday_bouquet</string>
    <string name="birthday" >Birthday</string>
    <string name="graduation_bouquet" >graduation_bouquet</string>
    <string name="graduation" >Graduation</string>
    <string name="separate_choices" >Separate choices</string>
    <string name="flower_stem" >Flower stem</string>
    <string name="foliage" >Foliage</string>
    <string name="flower_buds" >Flower buds</string>
    <string name="wraps" >Wraps</string>
    <string name="make_your_own_bouquet" >Make your own bouquet</string>
    <string name="custom_bouquet" >custom_bouquet</string>
    <string name="get_started" >Get started</string>
    <string name="shop" >Shop</string>
    <string name="search" >Search</string>
    <string name="cart" >Cart</string>
    <string name="profile" >Profile</string>
    <string name="casual_collection">Casual Collection</string>
    <string name="zinnia_flower_bouquet">Zinnia flower bouquet</string>
    <string name="rs_3500_00">Rs.3500.00</string>
    <string name="_1">+ 1 -</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="previous">← Previous</string>
    <string name="_1n">1</string>
    <string name="_2">2</string>
    <string name="_dot">...</string>
    <string name="_5">5</string>
    <string name="nextnav">Next →</string>
    <string name="anniversary_collection">Anniversary Collection</string>
    <string name="Birthday_collection">Birthday Collection</string>
    <string name="graduation_collection">Graduation Collection</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="choose_your_favorite_flowers">Choose your favorite flowers</string>
    <string name="pre">←</string>
    <string name="nex">→</string>
    <string name="your_bundle">Your Bundle</string>
    <string name="review">Review</string>
    <string name="pink_tulip">Pink Tulip</string>
    <string name="_200">200/-</string>
    <string name="x2">x2</string>
    <string name="red_rose">red Rose</string>
    <string name="_400">400/-</string>
    <string name="_2400">2400/-</string>
    <string name="total">total</string>
    <string name="choose_your_favorite_foliage">Choose your favorite Foliage</string>
    <string name="ferns">Ferns</string>
    <string name="_2800">2800</string>
    <string name="Next">Next</string>
    <string name="nextb">Next</string>
    <string name="previousb">Previous</string>
    <string name="choose_your_favorite_flower_buds">Choose your favorite Flower buds</string>
    <string name="rosebuds">roseBuds</string>
    <string name="_300">300/-</string>
    <string name="x4">x4</string>
    <string name="_4000">4000/-</string>
    <string name="choose_your_favorite_wrapper">Choose your favorite Wrapper</string>
    <string name="wrapper">Wrapper</string>
    <string name="_500">500/-</string>
    <string name="x1">x1</string>
    <string name="_4500">4500/-</string>
    <string name="view_cart">View cart</string>
    <string name="checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="i_agree_to_terms_privacy_policy"><![CDATA[I agree to Terms & Privacy Policy.]]></string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password :</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email">Email :</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="user_name">User Name :</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome">Welcome!</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="florio_logo">Florio Logo</string>
    <string name="profile_p">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="jerad_gmail_com">Jerad@gmail.com</string>
    <string name="jerad_peterson">Jerad Peterson</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings_ico">Settings</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="help_center">Help center</string>
    <string name="help_icon">Help Icon</string>
    <string name="saved">Saved</string>
    <string name="saved_icon">Saved Icon</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_icon">Transactions Icon</string>
    <string name="ssettings">Settings</string>
    <string name="peony">peony</string>
    <string name="zinnia">Zinnia</string>
    <string name="lavender">lavender</string>
    <string name="hydrangea">Hydrangea</string>
    <string name="dusty_miller">Dusty Miller</string>
    <string name="lemon_leaf">Lemon Leaf</string>
    <string name="_100">100</string>
    <string name="silver_dollar_eucalyptus">Silver Dollar Eucalyptus</string>
    <string name="bells_of_ireland">Bells of Ireland</string>
    <string name="gyp">Gyp</string>
    <string name="grevillea">Grevillea</string>
    <string name="aboli_bud">Aboli bud</string>
    <string name="hibiscus_bud">Hibiscus bud</string>
    <string name="jasmin_bud">Jasmin bud</string>
    <string name="purple_iris_bud">Purple Iris bud</string>
    <string name="yellow_rose_bud">Yellow Rose bud</string>
    <string name="red_rose_bud">Red Rose bud</string>
    <string name="pink_wrap">Pink wrap</string>
    <string name="designed_white_wrap">Designed White wrap</string>
    <string name="designed_orange_wrap">Designed Orange wrap</string>
    <string name="brown_wrap">Brown wrap</string>
    <string name="gold_wrap">Gold wrap</string>
    <string name="white_wrap">White wrap</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_methodd">Payment Method</string>
    <string name="visa_card">Visa Card</string>
    <string name="choose_method">Choose method</string>
    <string name="cash">cash</string>
    <string name="visa">Visa</string>
    <string name="paypal">PayPal</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="enter_cardholder_name">Enter cardholder name</string>
    <string name="cvv">cvv</string>
    <string name="enter_cvv">Enter cvv</string>
    <string name="card_number">Card number</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="expire_date">Expire date</string>
    <string name="enter_expire_date">Enter expire date</string>
    <string name="save_payment">Save Payment</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_in">Sign in</string>
    <string name="foget_password">Foget Password</string>
    <string name="foget_passwordd">Foget Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="please_enter_the_email_address_associate_with_yor_account">Please enter the email address associate with yor account</string>
    <string name="send_otp">Send OTP</string>
    <string name="forget_passwordd">Forget password</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="didn_t_get_the_otp_resend_it">Didn\'t get the OTP? Resend it</string>
    <string name="Continue">Continue</string>
    <string name="enter_first_otp_digit">Enter first OTP digit</string>
    <string name="first_otp_digit">First OTP digit</string>
    <string name="second_otp_digit">Second OTP digit</string>
    <string name="third_otp_digit">Third OTP digit</string>
    <string name="fourth_otp_digit">Fourth OTP digit</string>
    <string name="digit_3">digit 3</string>
    <string name="e_g_8">e.g 8</string>
    <string name="_8">8</string>
    <string name="flower_stems">Flower Stems</string>
    <string name="log_out">Log out</string>
    <string name="get_startedd">Get Started</string>


</resources>