<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C6C7E">

    <!-- Card View for the Form -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Logo -->
            <ImageView
                android:layout_width="138dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="-10dp"
                android:contentDescription="@string/florio_logo"
                android:src="@drawable/floria_logo" />

            <!-- Welcome Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/katibeh"
                android:text="@string/forget_password"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-25dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/katibeh"
                android:text="@string/please_enter_the_email_address_associate_with_yor_account"
                android:textSize="16sp" />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"/>




            <Button
                android:id="@+id/pre_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#800080"
                android:text="@string/send_otp"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>